fix: nav bar bug, not collapsing when following links

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -167,7 +167,7 @@ a.btn.btn-primary.btn-lg:active {
 /* youtube vid on index.html */
 
 #index-music {
-	padding: 0 20px 20px 20px;
+	padding-bottom: 20px;
 }
 
 .cta#music-cta {
